--- a/private/locales/en-US.json
+++ b/private/locales/en-US.json
@@ -1,5 +1,6 @@
 {
   "browse": "Browse",
+  "browse_more": "Browse more",
 
   "welcome_logged_in": "Welcome to %s, %s",
   "welcome_logged_in_beta": "Welcome, %s",
@@ -13,5 +14,7 @@
 
   "search": "Search",
 
-  "reply": "Reply"
+  "write_comment": "Write your comment here.",
+  "reply": "Reply",
+  "post": "Post"
 }
