--- a/private/locales/en-US.json
+++ b/private/locales/en-US.json
@@ -2,8 +2,9 @@
   "browse": "Browse",
   "browse_more": "Browse more",
 
-  "welcome_logged_in": "Welcome to %s, %s",
-  "welcome_logged_in_beta": "Welcome, %s",
+  "welcome_logged_in": "Welcome back, %s",
+  "welcome_logged_in_finalium": "Welcome to %s, %s",
+  "welcome_logged_in_finalium_beta": "Welcome, %s",
   "welcome_logged_out": "Welcome to %s",
 
   "random_uploads": "Random Uploads",
