updated fulptube branding, minor template updates

--- a/private/locales/en-US.json
+++ b/private/locales/en-US.json
@@ -11,13 +11,10 @@
   "random_uploads_desc": "Random selection of uploads",
 
   "recent_uploads": "Recent",
-  "recent_uploads_desc": "All latest uploads",
+  "recent_uploads_desc": "Most recent uploads",
 
   "site_news": "News",
   "site_news_desc": "Site announcements",
-
-  "recent_tags": "Tags",
-  "recent_tags_desc": "Last 100 tags",
 
   "more": "More",
 
